# especially-haskell

./: .gitignore  Makefile  README.org  e.cabal
content/: TODO.org
content/fam/: fam.cabal  stack.yaml
content/fam/src/: FAM.lhs
content/graphviz-example/: .gitignore  Makefile  graphviz-example.cabal  stack.yaml
content/graphviz-example/src/: ex3.dot
content/practical_recursion_schemes/: .gitignore  Makefile  PRS.cabal  README.md  stack.yaml
content/practical_recursion_schemes/src/: PRS.hs  PRS.org
content/recursion-schemes/: .gitignore  2016-lambda-conf-proposal.org  2016-strange-loop-proposal.org  2017-lambda-conf-proposal.org  Harold-Carr-LambdaConf-2017-Interview.md  Makefile  README.md  README.org  RS.cabal  stack.yaml
content/recursion-schemes-example/: .gitignore  Makefile  PRS.cabal  README.md  stack.yaml
content/recursion-schemes-tim-williams/: .gitignore  Makefile  README.md  RS.cabal  stack.yaml
content/recursion-schemes-tim-williams/src/: RS.lhs
content/recursion-schemes/extra-material/: fold.hs  fold.html  fold.org
content/recursion-schemes/src/: 0-NOTES.org  Ana.lhs  AnnF.lhs  Apo.lhs  Cata.lhs  CtxF.lhs  Explicit.lhs  ExplicitAndFold.lhs  ExprF.lhs  Fixpoint.lhs  Foldable.lhs  Futu.hs  Futu.lhs  Histo.lhs  Hylo.lhs  Intro.lhs  ListF.lhs  NatF.lhs  Para.lhs  RS.lhs  RSL.hs  RSL17.lhs  RSL17_part2.lhs  Sigs.hs  StreamF.lhs  Test.hs  TreeF.hs  Z.hs  Zygo.hs  Zygo.lhs
graphviz-example/: .gitignore  Makefile  e.cabal  stack.yaml
graphviz-example/src/: graphviz.hs  graphviz.hs.org  graphviz.org  monads.org
infrastructure/: i.cabal  stack.yaml
infrastructure/src/: Infra.hs
src/: graphviz.org
