name:                e
version:             0.1.0.0
synopsis:            book/web/blog infrastructure for now
description:         see README
homepage:            https://github.com/haroldcarr/especially-haskell
license:             BSD3
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2010 Harold Carr
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

executable e-exe
  hs-source-dirs:      src
  main-is:             graphviz.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl
                     , filepath
                     , graphviz
                     , haskell-src
                     , syb
                     , text
  default-language:    Haskell2010

-- test-suite simple-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , simple
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haroldcarr/especially-haskell
