name:                i
version:             0.1.0.0
synopsis:            book/web/blog infrastructure for now
description:         see README
homepage:            https://github.com/haroldcarr/especially-haskell
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable infra
  hs-source-dirs:      src
  main-is:             Infra.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haroldcarr/especially-haskell
