name:                fam
version:             0.0.1
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FAM
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , test-hunit-util
  default-language:    Haskell2010
