name:                PRS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/prs#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PRS
  build-depends:       base
                     , data-ordlist
                     , recursion-schemes
  default-language:    Haskell2010
