name:                PRS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PRS
  build-depends:       base
                     , data-ordlist
                     , recursion-schemes
  default-language:    Haskell2010
