name:                RS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     RS
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , bool-extras
                     , containers
                     , hashable
                     , hashtables
                     , HUnit
                     , mtl
                     , parsec
                     , test-hunit-util
                     , wl-pprint
  default-language:    Haskell2010
