name:                RS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ana
                     , Cata
                     , Explicit
                     , Fixpoint
                     , Foldable
                     , Futu
                     , Hylo
                     , Intro
                     , ListF
                     , NatF
                     , Para
                     , RS
                     , RSL
                     , RSL17
                     , Test
                     , TreeF
                     , Zygo
  build-depends:       base
                     , bool-extras
                     , containers
                     , data-ordlist
                     , hashable
                     , hashtables
                     , HUnit
                     , mtl
                     , parsec
                     , recursion-schemes
                     , test-hunit-util
                     , wl-pprint
  default-language:    Haskell2010
  ghc-options:         -Wall
