name:                RS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ana
                     , AnnF
                     , Apo
                     , Cata
                     , CtxF
                     , Explicit
                     , ExprF
                     , Fixpoint
                     , Foldable
                     , Futu
                     , Histo
                     , Hylo
                     , Intro
                     , ListF
                     , NatF
                     , Para
                     , RS
                     , RSL17
                     , StreamF
                     , Test
                     , TreeF
                     , Zygo
  build-depends:       base
                     , bool-extras
                     , containers
                     , data-ordlist
                     , hashable
                     , hashtables
                     , HUnit
                     , mtl
                     , parsec
                     , recursion-schemes
                     , test-hunit-util
                     , wl-pprint
  default-language:    Haskell2010
  ghc-options:         -Wall
